# PICplusplus

./: CMakeLists.txt  TODO.md  conanfile.txt  index.html
DjangoServices/: db.sqlite3  manage.py
DjangoServices/PICplusplusServices/: asgi.py  settings.py  urls.py  views.py  wsgi.py
frontend/: index.html
inputFiles/: testInput.txt
lib/: CMakeLists.txt  complex.cpp  fft.cpp
lib/include/: Accel.hpp  Fields.hpp  First_EE.hpp  SetRho.hpp  init.hpp
lib/pythonBindings/: CMakeLists.txt
pythonBindings/: CMakeLists.txt  pythonBind.cpp
src/: main.cpp
test/include/: PICTest.hpp
